--- a/etc/nova/rootwrap.d/compute.filters
+++ b/etc/nova/rootwrap.d/compute.filters
@@ -190,3 +190,6 @@ lvs: CommandFilter, /sbin/lvs, root
 
 # nova/virt/libvirt/utils.py:
 vgs: CommandFilter, /sbin/vgs, root
+
+# nova/virt/libvirt/driver.py:
+delete_qemu_log: RegExpFilter, rm, root, rm, -f, .*\.log$
