Delete QEMU instance logs with instance.
Fixes bug 1160495.
(cherry picked from commit 32a65f2b52b48648ea0aab29354019470d19d616)

Conflicts:

	etc/nova/rootwrap.d/compute.filters
	nova/virt/libvirt/driver.py

--- a/etc/nova/rootwrap.d/compute.filters
+++ b/etc/nova/rootwrap.d/compute.filters
@@ -199,3 +199,6 @@ systool: CommandFilter, /usr/bin/systool, root
 # nova/virt/libvirt/volume.py:
 sginfo: CommandFilter, /usr/bin/sginfo, root
 sg_scan: CommandFilter, /usr/bin/sg_scan, root
+
+# nova/virt/libvirt/driver.py:
+delete_qemu_log: RegExpFilter, rm, root, rm, -f, .*\.log$
